Closed Bug 451139 Opened 16 years ago Closed 16 years ago

The return value of read() function should check in nsRandomAccessInputStream::readline instead of invoking failed().

Categories

(Core :: XPCOM, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9.1b1

People

(Reporter: hiro, Assigned: hiro)

Details

(Keywords: fixed1.8.1.18)

Attachments

(1 file)

User-Agent:       Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8.1.15) Gecko/20080702 Ubuntu/8.04 (hardy) Firefox/2.0.0.15 Kazehakase/0.5.4
Build Identifier: 

The return value of read() function should check in nsRandomAccessInputStream::readline.

I guess TB48808062, TB48797096 etc. are caused by this issue.


Reproducible: Always

Steps to Reproduce:
1.
2.
3.
Attachment #334398 - Flags: review?(brendan)
Attachment #334398 - Flags: approval1.8.1.17?
Comment on attachment 334398 [details] [diff] [review]
Patch
[Checkin: Comment 7]

Looks good to me but I would be glad if Benjamin could sr+.

/be
Attachment #334398 - Flags: superreview?(benjamin)
Attachment #334398 - Flags: review?(brendan)
Attachment #334398 - Flags: review+
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment on attachment 334398 [details] [diff] [review]
Patch
[Checkin: Comment 7]

Please get the requested super-review before requesting approval to land the patch. You can find benjamin on irc.mozilla.org
Attachment #334398 - Flags: approval1.8.1.17?
Attachment #334398 - Flags: superreview?(benjamin) → superreview+
Comment on attachment 334398 [details] [diff] [review]
Patch
[Checkin: Comment 7]

The patch will raise stability.
Attachment #334398 - Flags: approval1.8.1.17?
Comment on attachment 334398 [details] [diff] [review]
Patch
[Checkin: Comment 7]

This will have to get looked at in 1.8.1.18. We're frozen.
Attachment #334398 - Flags: approval1.8.1.17? → approval1.8.1.18?
Attachment #334398 - Flags: approval1.8.1.18? → approval1.8.1.18+
Comment on attachment 334398 [details] [diff] [review]
Patch
[Checkin: Comment 7]

Approved for 1.8.1.18, a=dveditz for release-drivers
Assignee: nobody → poincare
http://hg.mozilla.org/mozilla-central/rev/1d02d37faf24
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.1b1
Whiteboard: [checkin-needed: 1.8 branch]
Attachment #334398 - Attachment description: Patch → Patch [Checkin: Comment 7]
Fix checked into the 1.8 branch
Whiteboard: [checkin-needed: 1.8 branch]
You need to log in before you can comment on or make changes to this bug.