Bug 451139 - "The return value of read() function should check in nsRandomAccessInputStream::readline instead of invoking failed()." [r=brendan sr=bsmedberg]

Index: xpcom/obsolete/nsFileStream.cpp
===================================================================
RCS file: /cvsroot/mozilla/xpcom/obsolete/nsFileStream.cpp,v
retrieving revision 1.5.28.1